@@ -33,6 +33,7 @@ __device__ void sfmt_init(RandType *t,RandType *tnew,uint n_seed[],uint idx){
      ini[0]=n_seed[0];
      ini[1]=n_seed[1];
      init_by_array(ini, 2);
+     fill_array32(t,RAND_BUF_LEN);
 }
 // transform into [0,1] random number
 __device__ float rand_uniform01(RandType t[RAND_BUF_LEN]){
